# freeapi

./: .gitignore  Dockerfile  README.md  __init__.py  empty_interface.py  git_init.sh  main.py  pyproject.toml  qwen_fastapi.py  requirements.txt  startup.sh  temp.txt  test.py
.github/workflows/: docker-image.yml
app/: __init__.py
app/core/: __init__.py  app.py  auth.py  config.py  errors.py  http.py  my_http.py  registry.py  storage.py  streaming.py
app/routes/: __init__.py  chat.py  gemini_images.py  images.py  videos.py
app/schemas/: __init__.py  chat.py  common.py  gemini_image.py  gemini_image_response.py  image.py  seedream.py  seedream_response.py  video.py
app/vendors/: __init__.py  base.py  gpt2image.py  gpt2image_chat.py  grok_video.py  qwen.py  seedance.py  seedream2gemini.py
tests/: test_qwen.py
