[project]
name = "freeapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiostream==0.7.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "click==8.4.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "gunicorn==23.0.0",
    "fastapi==0.136.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "jiter==0.15.0",
    "openai==2.41.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "sniffio==1.3.1",
    "sse-starlette==3.4.4",
    "starlette==1.2.1",
    "tqdm==4.68.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.49.0",
    "charset-normalizer==3.4.7",
    "loguru==0.7.3",
    "packaging==26.2",
    "requests==2.34.2",
    "urllib3==2.7.0",
    "websockets==16.0",
    "win32-setctime==1.2.0",
    "minio>=7.2.20",
    "retry>=0.9.2",
    "httpx-retries>=0.6.0",
]
